force-app/main/default/objects/Lead/fields/Accettazione_Privacy__c.field-meta.xml
<CustomField>
    <fullName>Accettazione_Privacy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accettazione Privacy</label>
    <type>Checkbox</type>
</CustomField>