force-app/main/default/objects/Lead/fields/Campi_di_Interesse__c.field-meta.xml
<CustomField>
    <fullName>Campi_di_Interesse__c</fullName>
    <label>Campi di Interesse</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sviluppo software</fullName>
            </value>
            <value>
                <fullName>Consulenza IT</fullName>
            </value>
            <value>
                <fullName>Integrazione Software</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Digital Marketing</fullName>
            </value>
            <value>
                <fullName>Digital Design</fullName>
            </value>
            <value>
                <fullName>Digital Editing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>