force-app/main/default/objects/Lead/fields/Consulenza_IT__c.field-meta.xml
<CustomField>
    <fullName>Consulenza_IT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consulenza IT</label>
    <type>Checkbox</type>
</CustomField>