force-app/main/default/objects/Lead/fields/DigitalDesign__c.field-meta.xml
<CustomField>
    <fullName>DigitalDesign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Digital Design</label>
    <type>Checkbox</type>
</CustomField>