force-app/main/default/objects/Lead/fields/DigitalEditing__c.field-meta.xml
<CustomField>
    <fullName>DigitalEditing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Digital Editing</label>
    <type>Checkbox</type>
</CustomField>