force-app/main/default/objects/Lead/fields/DigitalMarketing__c.field-meta.xml
<CustomField>
    <fullName>DigitalMarketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Digital Marketing</label>
    <type>Checkbox</type>
</CustomField>