force-app/main/default/objects/Lead/fields/FieldsOfInterest__c.field-meta.xml
<CustomField>
    <fullName>FieldsOfInterest__c</fullName>
    <label>Fields Of Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FieldsOfInterest</valueSetName>
    </valueSet>
</CustomField>