force-app/main/default/objects/Lead/fields/Integrazione_Software__c.field-meta.xml
<CustomField>
    <fullName>Integrazione_Software__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Integrazione Software</label>
    <type>Checkbox</type>
</CustomField>