force-app/main/default/objects/Lead/fields/ITConsulting__c.field-meta.xml
<CustomField>
    <fullName>ITConsulting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IT Consulting</label>
    <type>Checkbox</type>
</CustomField>