force-app/main/default/objects/Lead/fields/Mulesoft__c.field-meta.xml
<CustomField>
    <fullName>Mulesoft__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mulesoft</label>
    <type>Checkbox</type>
</CustomField>