force-app/main/default/objects/Lead/fields/PostImplementationSupport__c.field-meta.xml
<CustomField>
    <fullName>PostImplementationSupport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Post-Implementation Support</label>
    <type>Checkbox</type>
</CustomField>