force-app/main/default/objects/Lead/fields/PrivacyAcceptance__c.field-meta.xml
<CustomField>
    <fullName>PrivacyAcceptance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Privacy Acceptance</label>
    <type>Checkbox</type>
</CustomField>