force-app/main/default/objects/Lead/fields/Rating_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Rating_Indicator__c</fullName>
    <formula>CASE((Rating), 
&apos;Hot&apos;, IMAGE(&apos;/resource/red&apos;, &apos;Hot&apos;,25,25), 
&apos;Warm&apos;, IMAGE(&apos;/resource/yellow&apos;, &apos;Warm&apos;,25,25), 
&apos;Cold&apos;, IMAGE(&apos;/resource/green&apos;, &apos;Cold&apos;,25,25), 
&apos;Something wrong here...&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rating Indicator</label>
    <type>Text</type>
</CustomField>