force-app/main/default/objects/Lead/fields/ServiceMax__c.field-meta.xml
<CustomField>
    <fullName>ServiceMax__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ServiceMax</label>
    <type>Checkbox</type>
</CustomField>