force-app/main/default/objects/Lead/fields/Servizi_di_supporto_post_implementazione__c.field-meta.xml
<CustomField>
    <fullName>Servizi_di_supporto_post_implementazione__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Servizi di supporto post-implementazione</label>
    <type>Checkbox</type>
</CustomField>