force-app/main/default/objects/Lead/fields/SoftwareDevelopment__c.field-meta.xml
<CustomField>
    <fullName>SoftwareDevelopment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Software Development</label>
    <type>Checkbox</type>
</CustomField>