force-app/main/default/objects/Lead/fields/SoftwareIntegration__c.field-meta.xml
<CustomField>
    <fullName>SoftwareIntegration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Software Integration</label>
    <type>Checkbox</type>
</CustomField>