force-app/main/default/objects/Lead/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <formula>CASE((LeadSource), 
&apos;Web&apos;, IMAGE(&apos;/resource/web&apos;, &apos;Web&apos;,25,25), 
&apos;Phone Inquiry&apos;, IMAGE(&apos;/resource/phone&apos;, &apos;Phone Inquiry&apos;,25,25), 
&apos;Partner Referral&apos;, IMAGE(&apos;/resource/community&apos;, &apos;Partner Referral&apos;,25,25), 
&apos;Purchased List&apos;, IMAGE(&apos;/resource/purchasedList&apos;, &apos;Purchased List&apos;,25,25), 
&apos;Not Defined&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source</label>
    <type>Text</type>
</CustomField>