force-app/main/default/objects/Lead/fields/SourceCompany__c.field-meta.xml
<CustomField>
    <fullName>SourceCompany__c</fullName>
    <label>Source Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NexusAT</fullName>
            </value>
            <value>
                <fullName>LinksMT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>