force-app/main/default/objects/Lead/fields/Sviluppo_Software__c.field-meta.xml
<CustomField>
    <fullName>Sviluppo_Software__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sviluppo Software</label>
    <type>Checkbox</type>
</CustomField>