force-app/main/default/objects/Lead/recordTypes/Nexus.recordType-meta.xml
<RecordType>
    <fullName>Nexus</fullName>
    <active>true</active>
    <businessProcess>Nexus</businessProcess>
    <label>Nexus</label>
</RecordType>