force-app/main/default/objects/Lead/listViews/SalesNexus_Lead.listView-meta.xml
<ListView>
    <fullName>SalesNexus_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>SalesNexus</label>
    <queue>SalesNexus</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>